nhu la xuong can` khop, va nhu hoc sinh can lop'.. lop' lop' lop' love u <3

--- a/CNW_N8_MVC/Views/User/Config.cshtml
+++ b/CNW_N8_MVC/Views/User/Config.cshtml
@@ -44,7 +44,7 @@
                         </p>
                         <div class="collapse show" id="user-info">
                             <div class="mt-4">
-                                <form method="get" action="/User/UserChanges/"  >
+                                <form method="post" action="/User/UserChanges/">
                                     <div class="form-row">
                                         <div class="form-group col-sm-4">
                                             <label class="fs12">Họ Và Tên</label>
@@ -80,7 +80,7 @@
                         </p>
                         <div class="collapse show" id="user-password">
                             <div class="mt-4">
-                                <form method="get" action="/User/PasswordChanges/">
+                                <form method="post" action="/User/PasswordChanges/">
                                     <div class="form-row">
                                         <div class="form-group col-sm-6">
                                             <label class="fs12">Mật Khẩu Hiện Tại</label>
