--- a/CNW_N8_MVC/Views/User/Booking.cshtml
+++ b/CNW_N8_MVC/Views/User/Booking.cshtml
@@ -59,37 +59,42 @@
                                         <div class="col text-center">
                                             <p style="margin-right:55px" class=" semi-bold">Thành Tiền</p>
                                         </div>
+                                        <div class="col text-center">
+                                            <p style="margin-right:55px" class=" semi-bold"> </p>
+                                        </div>
                                         <div class="clear-fix"></div>
                                     </div>
                                     <div id="list_bookings" class="accordion filter-accordion">
-
-
                                         <div class="panel" data-room-id="booking1">
                                             @foreach (var it in Model.lines)
                                             {
                                                 if (it.Product.Status_checking == "hotel")
                                                 {
-                                            <div class="row pt-3 pb-3 panel-row panel-border-grey" id="row_@it.Product.Id+@it.Product.Name">
-                                                <div class="col">@it.Product.Name</div>
-                                                <div class="col">@it.Quantity</div>
-                                                <div class="col">@it.SelectDichVu</div>
-                                                <div class="col">@it.ThanhTienDichVu</div>
-                                                <div class="col">@((it.Quantity * int.Parse(it.Product.Sell_price.ToString())+it.ThanhTienDichVu).ToString()) VNĐ</div>
-                                                <a style="margin-right:5px; color:red;" href="@Url.Action("RemoveLine","User",new { @id = it.Product.Id, @checkin = it.Product.Checkin , @status_checking = "hotel"})">Xoá</a>
-                                                <div class="clear-fix"></div>
-                                            </div>
+                                                    <div class="row pt-3 pb-3 panel-row panel-border-grey" id="row_@it.Product.Id+@it.Product.Name">
+                                                        <div class="col">@it.Product.Name</div>
+                                                        <div class="col text-center">@it.Quantity</div>
+                                                        <div class="col text-center">@it.SelectDichVu</div>
+                                                        <div class="col text-center">@it.ThanhTienDichVu</div>
+                                                        <div class="col text-center">@((it.Quantity * int.Parse(it.Product.Sell_price.ToString())+it.ThanhTienDichVu).ToString()) VNĐ</div>
+                                                        <div class="col text-center">
+                                                            <a style="margin-right:5px; color:red;" href="@Url.Action("RemoveLine","User",new { @id = it.Product.Id, @checkin = it.Product.Checkin , @status_checking = "hotel"})">Xoá</a>
+                                                        </div>
+                                                        <div class="clear-fix"></div>
+                                                    </div>
                                                 }
                                                 if (it.Product.Status_checking == "homestay")
                                                 {
-                                        <div class="row pt-3 pb-3 panel-row panel-border-grey" id="row_@it.Product.Id+@it.Product.Name">
-                                            <div class="col">@it.Product.Name</div>
-                                            <div class="col text-center">@it.Quantity</div>
-                                            <div class="col text-center">@it.SelectDichVu</div>
-                                            <div class="col">@it.ThanhTienDichVu</div>
-                                            <div class="col text-center">@((it.Quantity * int.Parse(it.Product.Sell_price.ToString()) + it.ThanhTienDichVu).ToString()) VNĐ</div>
-                                            <a style="margin-right:5px; color:red;" href="@Url.Action("RemoveLine","User", new {@id = it.Product.Id, @checkin = it.Product.Checkin , @status_checking = "homestay"})">Xoá</a>
-                                            <div class="clear-fix"></div>
-                                        </div>
+                                                    <div class="row pt-3 pb-3 panel-row panel-border-grey" id="row_@it.Product.Id+@it.Product.Name">
+                                                        <div class="col">@it.Product.Name</div>
+                                                        <div class="col text-center">@it.Quantity</div>
+                                                        <div class="col text-center">@it.SelectDichVu</div>
+                                                        <div class="col text-center">@it.ThanhTienDichVu</div>
+                                                        <div class="col text-center">@((it.Quantity * int.Parse(it.Product.Sell_price.ToString())+it.ThanhTienDichVu).ToString()) VNĐ</div>
+                                                        <div class="col text-center">
+                                                            <a style="margin-right:5px; color:red;" href="@Url.Action("RemoveLine","User",new { @id = it.Product.Id, @checkin = it.Product.Checkin , @status_checking = "hotel"})">Xoá</a>
+                                                        </div>
+                                                        <div class="clear-fix"></div>
+                                                    </div>
                                                 }
                                                 @*@Ajax.ActionLink("Xoa AJ", "DeleteItem", new { @id = it.Product.Id, @status_check =it.Product.Status_checking}, new AjaxOptions
                                            {
