--- a/CNW_N8_MVC/Views/Hotel/Detail.cshtml
+++ b/CNW_N8_MVC/Views/Hotel/Detail.cshtml
@@ -56,10 +56,12 @@
                 <hr class="mt-5 mb-5">
                 <div class="package-options">
                     <div class="">
-                        <h3 class="text-main semi-bold">Lựa chọn ngày</h3>
+                        <h3 class="text-main semi-bold">Điền thông tin cần thuê</h3>
                     </div>
                     <div class="options-area">
                         <form method="get" action="/Hotel/AddItemHotel/@id">
+                            <br />
+                            <hr />
                             <p class="fs16 text-black"></p>
                             <div class="p-3">
                                 <p class="text-light-grey mb-3">Lựa chọn ngày</p>
@@ -78,47 +80,42 @@
                                         <div style="color:red; font-size:20px; margin-left:10px" id="divThongBao"></div>
                                     </div>
                                 </div>
-                                <p class="text-light-grey mb-3">Chọn các gói dịch vụ đính kèm tour</p>
+                                <br />
+                                <hr />
+                                <p class="text-light-grey mb-3">Chọn các gói dịch vụ đính kèm Khách sạn</p>
                                 @foreach (var it in Model.dichVu)
                                 {
-                                    <div class="form-inline">
-
-                                        <p class="fs14 text-left mr-3">@it.tenDichVu</p>
-
-                                        <input name="@it.idDichVu" type="radio" value="1" />Yes
-                                        <input name="@it.idDichVu" type="radio" value="0" checked="checked"/>No
-                                        <div class="package-price-box col-sm-5">
-                                            <div class="package-price-detail">
-                                                <p class="package-price-total"><span class="j-totalPrice">@it.donGiaDichVu vnđ</span></p>
-                                                <div class="act_result__cost_detail act_result__cost_detail--inline j-cost_detail">
-                                                </div>
-                                            </div>
-                                        </div>
-
-
-
+                                <div class="row ml-1">
+                                    <div class="col-sm-4">
+                                        <p class="fs16: text-left mr-3">@it.tenDichVu:</p>
                                     </div>
+                                    <div class="col-sm-4 form-inline">
+                                        <label class="mr-5 fs14"><input name="@it.idDichVu" type="radio" value="1" /><span class="ml-1"> Có</span></label>
+                                        <label class=" fs14"><input name="@it.idDichVu" type="radio" value="0" checked="checked" /><span class="ml-1"> Không</span></label>
+                                    </div>
+                                    <div class="col-sm-4">
+                                        <p class="fs16 ml-3 text-red">@it.donGiaDichVu vnđ</p>
+                                    </div>
+                                </div>
                                 }
+                                <br />
+                                <hr />
                                 @*<div class="form-inline">
 
-                                    <p class="fs14 text-left mr-3">Ăn sáng</p>
+            <p class="fs14 text-left mr-3">Ăn sáng</p>
 
-                                    <input name="dvAnSang" type="radio" value="1" />Yes
-                                    <input name="dvAnSang" type="radio" value="0" />No
-                                    <div class="package-price-box col-sm-5">
-                                        <div class="package-price-detail">
-                                            <p class="package-price-total"><span class="j-totalPrice">100000 vnđ</span></p>
-                                            <div class="act_result__cost_detail act_result__cost_detail--inline j-cost_detail">
-                                            </div>
-                                        </div>
-                                    </div>
-
-
-
-                                </div>*@
-
+            <input name="dvAnSang" type="radio" value="1" />Yes
+            <input name="dvAnSang" type="radio" value="0" />No
+            <div class="package-price-box col-sm-5">
+                <div class="package-price-detail">
+                    <p class="package-price-total"><span class="j-totalPrice">100000 vnđ</span></p>
+                    <div class="act_result__cost_detail act_result__cost_detail--inline j-cost_detail">
+                    </div>
+                </div>
+            </div>
+        </div>*@
                                 <div class="package-payment-info">
-                                    <p class="text-light-grey mb-3">Đơn Giá : </p>
+                                    <p class="text-light-grey mb-3">Đơn Giá Phòng: </p>
                                     <div class="package-price-wrapper">
                                         <div class="package-price-content-wrapper">
                                             <div class="package-price-box col-sm-5">
